2025-12-28T01:09:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20546784359 # 852
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-28
* notice: last 14d: unq all: 12 12
* notice: prev accum: outdated-unq outdated-all / unq all: 420 594 / 430 604
* notice: next accum: outdated-unq outdated-all / unq all: 420 594 / 432 606
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-27]

2025-12-27T01:00:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20532171190 # 851
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-27
* notice: last 14d: unq all: 10 10
* notice: prev accum: outdated-unq outdated-all / unq all: 419 593 / 430 604
* notice: next accum: outdated-unq outdated-all / unq all: 420 594 / 430 604
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-12] / []

2025-12-25T01:01:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20496527612 # 849
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-25
* notice: last 14d: unq all: 11 11
* notice: prev accum: outdated-unq outdated-all / unq all: 418 592 / 430 604
* notice: next accum: outdated-unq outdated-all / unq all: 419 593 / 430 604
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-10] / []

2025-12-24T01:01:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20475249702 # 848