@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-28T01:09:06Z",
-  "count_outdated" : 594,
-  "uniques_outdated" : 420,
-  "count" : 606,
-  "uniques" : 432,
+  "timestamp" : "2025-12-30T01:01:59Z",
+  "count_outdated" : 599,
+  "uniques_outdated" : 425,
+  "count" : 607,
+  "uniques" : 433,
   "clones" : [
-    {
-      "timestamp": "2025-12-15T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 5 ],
-      "uniques_decinc": [ 0, 5 ]
-    },
     {
       "timestamp": "2025-12-18T00:00:00Z",
       "count": 1,
@@ -58,6 +49,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-12-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
