@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 12,
+  "count": 8,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2025-12-15T00:00:00Z",
-      "count": 5,
-      "uniques": 5
-    },
     {
       "timestamp": "2025-12-18T00:00:00Z",
       "count": 1,
@@ -31,6 +26,11 @@
       "timestamp": "2025-12-27T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-12-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
